# monrust

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/api/: user_api.rs
src/models/: user_model.rs
src/repository/: mongodb_repos.rs
